[package]
name = "asna"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "asna-server"
path = "src/bin/server.rs"

[[bin]]
name = "asna-client"
path = "src/bin/client.rs"

[dependencies]
async-stream = "0.3.6"
bytes = "1.11.1"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
